2017-11-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-882

	* AUTHORS: Updated email addresses and contributors list.

2017-11-21 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-881

	* src/rte.cc (get_stepwise_scattersky_source):
	Initialize dSp_dx with 0 for non-pnd-affected Jac species. Fixes the
	wrong-H2O-Jacs when number freqs is >3 (so, not a dimensioning but an
	initialization bug).

	* AUTHORS:
	Moved myself up to "Authors of important components" and updated my email.

2017-11-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-880

	* src/m_psd.cc (psd_rwc_common, psdMH97): More detailed error
	message if a or b is wrong. The bad value now printed.

2017-11-21  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-879

	* src/gas_abs_lookup.cc (find_new_grid_in_old_grid):

	Replaced fixed tolerance of 1 Hz in comparison by a tolerance that uses
	a DBL_EPSILON times the frequency value being compared. This should
	prevent two neighboring frequencies being so close together in the old
	grid that one of them is selected twice for the new grid (leading to a
	not increasing assertion).
	Assertion in abs_lookupAdapt reported by Jana.

2017-11-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-878

	* src/m_rte.cc (iyEmissionStandard2): Now supports iy_aux_vars,
	but there is now just two options: "Transmission" and
	"Radiative background".

	* src/workspace.cc: Introduced iy_aux2. Will replace iy_aux, that
	will become an ArrayOfMatrix.

2017-11-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-877

	* src/m_rte.cc (iyEmissionStandard2): Work to avoid resizing of
	variables, and to make use of the new feature that joker works for
	empty dimensions.

	* src/rte.cc:
	(rtmethods_jacobian_init): Some restructuring to avoid resizing of variables.
	(get_ppath_atmvars): Now always set to have size (nnlte,np).
	Before if-statement and could be set to have size (0,0).
