@@ -1,3 +1,11 @@
+2017-11-22  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-883
+
+	* src/rte.cc (rtmethods_jacobian_finalisation): diy_dpath was
+	declared as const even though its content is modified in the
+	function. Fixes the issue I have reported to Richard.
+
 2017-11-22  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-882
